@@ -12,6 +12,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5532] Rename tx_seminars_Bag_Speaker to Tx_Seminars_Bag_Speaker
 - [#5531] Rename tx_seminars_Bag_Registration to tx_seminars_Bag_Registration
 - [#5573] Fix the spelling of "comma-separated"
 - [#5529] Rename tx_seminars_Bag_Category to Tx_Seminars_Bag_Category
